<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Arabic flashcards</string>
    
    <string name="about_title">About</string>
    <string name="about_text">Written by Bryan J. Maupin\n
\nUses icons from www.androidicons.com, licensed under the <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.</string>

    <string name="card_group_adjectives">Adjectives</string>
    <string name="card_group_adverbs">Adverbs</string>
    <string name="card_group_ahlan_wa_sahlan">Ahlan wa sahlan</string>
    <string name="card_group_all">All</string>
    <string name="card_group_all_chapters">All</string>
    <string name="card_group_categories">Categories</string>
    <string name="card_group_conjunctions">Conjunctions</string>
    <string name="card_group_interjections">Interjections</string>
    <string name="card_group_nouns">Nouns</string>
    <string name="card_group_parts_of_speech">Parts of speech</string>
    <string name="card_group_phrases">Phrases</string>
    <string name="card_group_prepositions">Prepositions</string>
    <string name="card_group_pronouns">Pronouns</string>
    <string name="card_group_verbs">Verbs</string>

    <string name="card_order_random">random</string>
    <string name="card_order_random_entry">Random</string>
    <string name="card_order_in_order">in order</string>
    <string name="card_order_in_order_entry">In order</string>

    <string name="chart_label_iffy">iffy</string>
    <string name="chart_label_known">known</string>
    <string name="chart_label_unknown">unknown</string>
    <string name="chart_message">Tap anywhere or press back to continue</string>
    <string name="chart_title">Session summary</string>

    <string name="choose_cards_heading">Choose cards</string>
    
    <string name="choose_study_set_cards_due">\u0020due</string>
    <string name="choose_study_set_cards_new">\u0020new today</string>
    <string name="choose_study_set_confirm_delete_study_set">All your progress on this study set will be lost!  Are you sure you want to delete this study set?</string>
    <string name="choose_study_set_context_menu_title">Edit study set</string>
    <string name="choose_study_set_delete_study_set">Delete study set</string>
    <string name="choose_study_set_loading_message">Loading...</string>
    <string name="choose_study_set_rename_study_set">Rename study set</string>
    <string name="choose_study_set_study_set_deleted">Study set deleted</string>

    <string name="dialog_choose_aws_chapter_title">Please select a chapter:</string>
    <string name="dialog_choose_card_category_title">Please select a category:</string>
    <string name="dialog_choose_part_of_speech_title">Please select one:</string>
    <string name="dialog_create_study_set_arabic">Arabic</string>
    <string name="dialog_create_study_set_arabic_short">(ar)</string>
    <string name="dialog_create_study_set_english">English</string>
    <string name="dialog_create_study_set_english_short">(en)</string>
    <string name="dialog_create_study_set_language">Language on front of cards:</string>
    <string name="dialog_create_study_set_name">Study set name:</string>
    <string name="dialog_create_study_set_negative_button">Cancel</string>
    <string name="dialog_create_study_set_positive_button">Create set</string>
    <string name="dialog_create_study_set_title">Create a new study set</string>
    <string name="dialog_rename_study_set_message">Please choose a new name for your study set:</string>
    <string name="dialog_rename_study_set_negative_button">Cancel</string>
    <string name="dialog_rename_study_set_positive_button">Rename set</string>
    
    <string name="help_title">Help</string>
    <string name="help_text"><b>Study sets</b>\n
&#8226; A study set is a set of cards you wish to learn that are scheduled for you based on how well you know them.\n 
&#8226; To create a study set, from the main screen click <b>Create new</b>.\n
&#8226; When viewing a study set:\n
\t&#8226; Swipe up/press the up key if you know the card well.\n
\t&#8226; Swipe down/press the down key if you don\'t know the card.\n
\t&#8226; Swipe left/press the right key if you know the card, but not well (it\'s \"iffy\").\n
\t&#8226; Swipe right/press the left key to view previous cards.\n
\n
<b>Browsing cards</b>\n
&#8226; To browse cards freely, from the main screen click <b>Browse cards</b>, then swipe left and right or press the left and right keys to change cards.\n</string>

<!--
    <string name="menu_choose_cards_label">Choose cards</string>
    <string name="menu_choose_cards_shortcut">c</string>
-->
    <string name="menu_help_label">Help</string>
    <string name="menu_help_shortcut">h</string>
    <string name="menu_search_label">Search</string>
    <string name="menu_search_shortcut">f</string>
    <string name="menu_settings_label">Settings</string>
    <string name="menu_settings_shortcut">s</string>
    
    <string name="parts_of_speech_adj_long">Adjectives</string>
    <string name="parts_of_speech_adj_short">adj</string>
    <string name="parts_of_speech_adv_long">Adverbs</string>
    <string name="parts_of_speech_adv_short">adv</string>
    <string name="parts_of_speech_conj_long">Conjunctions</string>
    <string name="parts_of_speech_conj_short">conj</string>
    <string name="parts_of_speech_noun_long">Nouns</string>
    <string name="parts_of_speech_noun_short">noun</string>
    <string name="parts_of_speech_participle_long">Participles</string>
    <string name="parts_of_speech_participle_short">participle</string>
    <string name="parts_of_speech_particle_long">Particles</string>
    <string name="parts_of_speech_particle_short">particle</string>
    <string name="parts_of_speech_phrase_long">Phrases</string>
    <string name="parts_of_speech_phrase_short">phrase</string>
    <string name="parts_of_speech_prep_long">Prepositions</string>
    <string name="parts_of_speech_prep_short">prep</string>
    <string name="parts_of_speech_pronoun_long">Pronouns</string>
    <string name="parts_of_speech_pronoun_short">pronoun</string>
    <string name="parts_of_speech_verb_long">Verbs</string>
    <string name="parts_of_speech_verb_short">verb</string>
    
    <string name="preferences_about">about</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_ask_card_order">ask_card_order</string>
    <string name="preferences_ask_card_order_summary">Ask for card order every time new cards are shown</string>
    <string name="preferences_ask_card_order_title">Ask for card order</string>
    <string name="preferences_cards_per_session">cards_per_session</string>
    <string name="preferences_cards_per_session_summary">Max number of cards to show per study set session</string>
    <string name="preferences_cards_per_session_title">Cards per session</string>
    <string name="preferences_category_about_title">About this app</string>
    <string name="preferences_category_arabic_title">Arabic</string>
    <string name="preferences_category_browse_cards_title">Browse cards</string>
    <string name="preferences_category_study_sets_title">Study sets</string>
    <string name="preferences_default_card_order">default_card_order</string>
    <string name="preferences_default_card_order_summary">Order in which to show the cards</string>
    <string name="preferences_default_card_order_title">Default card order</string>
    <string name="preferences_default_card_order_default">@string/card_order_in_order</string>
    <string name="preferences_default_lang">default_lang</string>
    <string name="preferences_default_lang_default">arabic</string>
    <string name="preferences_default_lang_summary">Language to show on front of cards</string>
    <string name="preferences_default_lang_title">Default card language</string>
    <string name="preferences_max_due_cards">max_due_cards</string>
    <string name="preferences_max_due_cards_summary">Max number of due cards to show at a time</string>
    <string name="preferences_max_due_cards_title">Max due cards</string>
    <string name="preferences_max_new_cards">max_new_cards</string>
    <string name="preferences_max_new_cards_summary">Max number of new cards to show at a time</string>
    <string name="preferences_max_new_cards_title">Max new cards</string>
    <string name="preferences_fix_arabic">fix_arabic</string>
    <string name="preferences_fix_arabic_summary">Uncheck this for versions of Android that support Arabic such as Jelly Bean or CyanogenMod</string>
    <string name="preferences_fix_arabic_title">Apply Arabic fixes</string>
    <string name="preferences_new_cards_per_day">new_cards_per_day</string>
    <string name="preferences_new_cards_per_day_summary">Max number of new cards to show per study set each day</string>
    <string name="preferences_new_cards_per_day_title">New cards per day</string>
    <string name="preferences_show_vowels">show_vowels</string>
    <string name="preferences_show_vowels_summary">Show vowels and other diacritics</string>
    <string name="preferences_show_vowels_title">Show vowels</string>
    <string name="preferences_title">Settings</string>
    <string name="preferences_use_color_blind_colors">use_color_blind_colors</string>
    <string name="preferences_use_color_blind_colors_summary">Use color blind friendly colors for study session summary chart</string>
    <string name="preferences_use_color_blind_colors_title">Use color blind colors</string>
    
    <string name="search_hint">Search cards</string>
    <string name="search_no_results">No results found</string>
    
    <string name="show_study_set_no_cards_due">There are no cards due at this time</string>
        
    <!-- update help_text string if you change this string -->
    <string name="study_set_browse_cards">Browse cards</string>
    <!-- update help_text string if you change this string -->
    <string name="study_set_create_new">Create new</string>
    <string name="study_set_heading">Please choose a study set</string>
    <string name="study_set_no_results">No study sets</string>
    <string name="study_set_no_results_details">Click below to create a new study set</string>
</resources>

