<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/dialog_create_study_set_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dip">
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dialog_create_study_set_name" />
	<EditText
		android:id="@+id/dialog_create_study_set_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dialog_create_study_set_language" />
    <RadioGroup
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<RadioButton android:id="@+id/dialog_create_study_set_arabic"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/dialog_create_study_set_arabic" 
		    android:checked="true" />
		<RadioButton android:id="@+id/dialog_create_study_set_english"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/dialog_create_study_set_english" />
    </RadioGroup>
</LinearLayout>
