<?xml version="1.0" encoding="utf-8"?>      
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:id="@+id/study_set_bottom"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/study_set_button_create_new"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/study_set_create_new"
            />
        <Button
            android:id="@+id/study_set_button_browse_cards"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/study_set_browse_cards"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/study_set_bottom"
        android:layout_alignParentTop="true"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/CustomHeader"
            android:text="@string/study_set_heading"
            />
        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />
    </LinearLayout>
</RelativeLayout>
